--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -9,25 +9,43 @@
     
     padding-top: 25px;
     padding-bottom:25px;
+    min-width: 230px;
+    white-space: nowrap;
    
 }
 .grid_container{
+   
     display: grid;
     height: 100%;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 0.65fr 1.2fr 2fr 4fr;
   
 }
+.bars_container{
+    width: 100%;
+    height: 30px;
+    padding-top: 10px;;
+    display: flex;
+    margin-left: 35px;
+    margin-top: 40px;
+}
 
+.bars_icon{
+    height: 30px;;
+}
+.bars_icon:hover{
+    cursor:pointer;
+}
 .header_logo_container{
     
     height: 70px;
     width:110px;
-    
+
     grid-column-start: 0;
     grid-column-end: 0;
     padding-left: 10%;
     
 }
+
 .logo_texts{
     text-align: left;
     text-decoration: none;
@@ -59,9 +77,70 @@
     font-family: "barlow-medium,barlow,sans-serif";
 }
 
+
+
+.nav_list_container{
+    width: 100%;
+    height: 100%;
+    
+    display: flex;
+    text-align: center;
+    align-items: center;
+    margin-left: 100px;
+}
+
+.nav_list_item{
+    list-style-type: none;
+    margin-left: 20px;
+    margin-right: 20px;
+    white-space: nowrap;
+    color: black;
+    font-family: "Sabon" , "serif"
+}
+.nav_list_item:hover{
+    color: rgb(92, 92, 92);
+    
+}
+
+
 @media only screen and (min-width:980px){
     .header_logo_container{
         margin-left: 5%;
+
     }
     
+    
+}
+@media only screen and (max-width: 835px) {
+    .header_inner_container{
+      display: none;
+       
+    }
+    .nav_list_container{
+        margin-left: 0px;
+  
+
+    }
+    .header_logo_container{
+        
+    }
+    .nav_list_item{
+        align-items: flex-end;
+        text-align: right;
+        list-style-type: none;
+        margin-left: 10px;
+        margin-right: 10px;
+        white-space: nowrap;
+    }
+}
+
+@media only screen and (max-width: 535px) {
+    .header_logo_container{
+        display: none;
+    }
+    .nav_list_container{
+        margin-left: 30px;
+  
+
+    }
 }
