--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -6,10 +6,10 @@
     z-index: 998;
     opacity: 40%;
     transition: 0.3s ease-in-out;
-   
+    display: flex;
 }
 #sidebar .sidebar_page{
-
+    display: none;
     opacity: 0%;
     transition: 0.3s ease-in-out;
    
@@ -31,7 +31,7 @@
     opacity: 100%;
 }
 #sidebar .sidebar_container.collapsed{
-    width: 100px;
+    width: 0px;
     opacity: 0;
     transition: 0.3s ease-in-out;
     
