--- a/frontend/src/components/pages/home/Recomendations/Card/Card.module.css
+++ b/frontend/src/components/pages/home/Recomendations/Card/Card.module.css
@@ -6,6 +6,7 @@
 
     border: 2px rgb(163, 156, 156) solid;
 }
+
 .card_inner{
     height: 100%;
     width:100%;
@@ -16,6 +17,12 @@
     height:430px;
     background-color: purple;
 }
+.image_container:hover{
+    height: 370px;
+    transition: ease-in-out 0.2s;
+    margin-bottom: 10px;
+}
+
 .author_container{
     text-align: left;
     padding-top: 20px;
@@ -32,7 +39,12 @@
 }
 
 .image_item{
-    object-fit: cover;
+    object-fit:fill;
     width:100%;
-    height: 100%;
+    height: 430px;
+
+}
+.image_item:hover{
+    height:380px;
+    transition: ease-in-out 0.2s;
 }
