--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,3 +1,6 @@
+.header{
+    border-bottom: 2px solid rgb(208, 208, 208);
+}
 .header_container{
     width: 100%;
     height: 121px;
@@ -21,7 +24,7 @@
   
 }
 .bars_container{
-    width: 100%;
+    width: 50px;
     height: 30px;
     padding-top: 10px;;
     display: flex;
@@ -86,7 +89,7 @@
     display: flex;
     text-align: center;
     align-items: center;
-    margin-left: 100px;
+    margin-left: 0px;
 }
 
 .nav_list_item{
