fix routing but now slow load times

--- a/frontend/src/components/pages/home/Recomendations/Recomendations.module.css
+++ b/frontend/src/components/pages/home/Recomendations/Recomendations.module.css
@@ -3,3 +3,11 @@
     width: 100%;
     background-color: aqua;
 }
+.cards_container{
+    display: flex;
+    margin:50px;
+
+}
+.card_item{
+     
+}
