--- a/frontend/src/components/pages/home/Recomendations/Card/Card.module.css
+++ b/frontend/src/components/pages/home/Recomendations/Card/Card.module.css
@@ -8,8 +8,13 @@
 }
 
 .card_inner{
-    height: 100%;
+    height: 490px;
     width:100%;
+    background-color: blue;
+    z-index: 2000;
+    position: relative;
+    
+    
    
 }
 .image_container{
@@ -17,12 +22,23 @@
     height:430px;
     background-color: purple;
 }
-.image_container:hover{
-    height: 370px;
-    transition: ease-in-out 0.2s;
-    margin-bottom: 10px;
-}
 
+.info_container{
+    position: absolute;
+    background-color: white;
+    bottom: 0;
+    z-index: 999;
+    height:60px;
+    width:100%;
+    transition: ease-in-out 0.25s;
+    color: black
+
+}
+.info_container:hover{
+    height:100px;
+    transition: ease-in-out 0.25s;
+
+}
 .author_container{
     text-align: left;
     padding-top: 20px;
@@ -36,7 +52,9 @@
     font-size: 18px !important;
     font-family: "Sabon", serif !important;
     font-weight: 100;
+    
 }
+
 
 .image_item{
     object-fit:fill;
@@ -44,7 +62,4 @@
     height: 430px;
 
 }
-.image_item:hover{
-    height:380px;
-    transition: ease-in-out 0.2s;
-}
+
