cleaning things up + fixed banner

--- a/frontend/src/components/pages/publication/Publication.module.css
+++ b/frontend/src/components/pages/publication/Publication.module.css
@@ -108,3 +108,12 @@
     text-decoration: none;
     cursor: pointer;
 }
+.recomendations_text{
+    text-align: left;
+    font-weight: 700;
+    font-size: 21px;
+    font-family: sans-serif;
+    
+    padding-left: 50px;
+    padding-top: 10px;
+}
