--- a/frontend/src/components/pages/home/EmailSubmission/EmailSubmission.module.css
+++ b/frontend/src/components/pages/home/EmailSubmission/EmailSubmission.module.css
@@ -1,8 +1,11 @@
 .container{
     width: 100%;
-    height:305px;
+    height:350px;
     background-color: blue;
-    background-image:url("https://librosdelasteroide.com/assets/images/pattern.png");
+    background-image:url("http://localhost:5000/files/public/test7.png");
+    
+    /*background-image:url("https://librosdelasteroide.com/assets/images/pattern.png");
+    */
     background-repeat: repeat;
     position: relative;;
 }
