--- a/frontend/src/components/pages/home/News/News.module.css
+++ b/frontend/src/components/pages/home/News/News.module.css
@@ -6,12 +6,46 @@
 }
 
 .news_container{
-    margin-left:400px;
-    margin-right:400px;
-    padding-top:50px;
-    background-color: aquamarine;
+    margin-left:250px;
+    margin-right:250px;
+    padding-top:70px;
     height: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 0.65fr;
     
+}
+
+.left_container{
+    text-align: left;
+}
+.news_header{
+    font-family: "Raleway", sans-serif;
+    font-size: 17px;
+    font-weight: 700;
+    line-height: 23px;
+}
+.news_title{
+    font-family: "Raleway", sans-serif;
+    font-size: 34px;
+    font-weight: 700;
+    line-height: 38px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
+.news_description{
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+}
+.right_container{
+    text-align: left;
+    margin-left: 20px;
+}
+.news_image{
+    padding-top: 30px;
+}
+.image{
+    width: 300px;
 }
