--- a/frontend/src/components/pages/books/Books.module.css
+++ b/frontend/src/components/pages/books/Books.module.css
@@ -47,3 +47,43 @@
     line-height: 26px;
     padding-top: 7px;
 }
+
+@media only screen and (max-width: 1160px) {
+    .cards_container{
+        background-color: rgb(0, 4, 255);
+        
+        width: 920px;
+
+    
+        
+    }
+}
+@media only screen and (max-width: 930px) {
+    .cards_container{
+        background-color: rgb(9, 255, 0);
+        
+        width: 690px;
+
+    
+        
+    }
+}
+@media only screen and (max-width: 700px) {
+    .cards_container{
+        background-color: rgb(255, 174, 0);
+        
+        width: 460px;
+
+    
+        
+    }
+}
+@media only screen and (max-width: 470px) {
+
+    .card{
+  
+    margin-left: 8px;
+    margin-right: 8px;
+
+}
+}
