--- a/frontend/src/components/pages/home/Recomendations/Card/Card.module.css
+++ b/frontend/src/components/pages/home/Recomendations/Card/Card.module.css
@@ -5,7 +5,7 @@
     padding: 30px;
     padding-bottom: 0;
 
-    border: 1.5px rgb(163, 156, 156) solid;
+    border: 1.5px rgba(177, 174, 174, 0.432) solid;
 }
 
 .card_inner{
