search functionality back end-levenshtein distance

--- a/frontend/src/components/pages/books/Books.module.css
+++ b/frontend/src/components/pages/books/Books.module.css
@@ -40,6 +40,10 @@
     line-height: 23px;
     padding-top: 25px;
 }
+
+.link{
+    color: black;
+}
 .link:visited{
     text-decoration: none;
     color: black;
