--- a/frontend/src/components/pages/books/Books.module.css
+++ b/frontend/src/components/pages/books/Books.module.css
@@ -1,5 +1,46 @@
 .cards_container_container{
-    width: 100%
+    width: 100%;
+    background-color: red;
+}
+.search_container{
+    padding-top: 30px;
+    width: 100%;
+    height:50px;
+ 
+    width: 1150px;
+    margin: 0 auto;
+    display: flex;
+}
+.inner_container{
+    display: flex;
+    margin: 0 auto;
+}
+.textbox{
+    width: 500px;
+    height:50px;
+}
+.dopdown{
+    width:100px;
+    height:50px;
+    margin-left: 5px;
+    margin-right: 5px;
+    
+}
+.dopdown:hover{
+    cursor: pointer;
+}
+.submit_butn{
+    width:100px;
+    height: 50px;
+   
+    background-color: white;
+    border: .5px solid rgb(75, 74, 74);
+    border-radius: 2px;
+}
+.submit_butn:hover{
+    background-color: rgb(245, 241, 255);
+    cursor: pointer;
+    
 }
 .cards_container{
 
@@ -16,7 +57,7 @@
     min-width: 200px;
     width: 200px;
 
-    margin-top: 50px;
+    margin-top: 40px;
     margin-bottom: 50px;
     margin-left: 15px;
     margin-right: 15px;
@@ -65,6 +106,11 @@
     
         
     }
+    .search_container{
+  
+        width: 920px;
+
+    }
 }
 @media only screen and (max-width: 930px) {
     .cards_container{
@@ -74,14 +120,50 @@
     
         
     }
+    .search_container{
+  
+        width: 690px;
+
+    }
+    .textbox{
+        width: 300px;
+        
+    }
+    .dopdown{
+        width:90px;
+       
+        
+    }
+ 
+    .submit_butn{
+        width:90px;
+       
+    }
 }
 @media only screen and (max-width: 700px) {
     .cards_container{
 
         width: 460px;
 
-    
+    }
+    .search_container{
+  
+        width: 460px;
+
+    }
+    .textbox{
+        width: 240px;
         
+    }
+    .dopdown{
+        width:90px;
+       
+        
+    }
+ 
+    .submit_butn{
+        width:90px;
+       
     }
 }
 @media only screen and (max-width: 470px) {
